connect shape attr's to data, use func return val

--- a/2_data-with-d3/index.html
+++ b/2_data-with-d3/index.html
@@ -8,7 +8,11 @@
   </head>
 
   <body>
-    <div class="canvas"></div>
+    <div class="canvas">
+      <svg width="600" height="600">
+        <rect></rect>
+      </svg>
+    </div>
 
     <!-- JAVASCRIPT -->
     <script src="./index.js"></script>
