--- a/2_data-with-d3/index.html
+++ b/2_data-with-d3/index.html
@@ -11,6 +11,8 @@
     <div class="canvas">
       <svg width="600" height="600">
         <rect></rect>
+        <rect></rect>
+        <rect></rect>
       </svg>
     </div>
 
