use 'external data' to create shapes

--- a/2_data-with-d3/index.html
+++ b/2_data-with-d3/index.html
@@ -9,12 +9,17 @@
 
   <body>
     <div class="canvas">
-      <svg width="600" height="600">
+      <svg id="index" width="300" height="300">
         <rect></rect>
       </svg>
     </div>
 
+    <div class="canvas">
+      <svg id="planets" width="600" height="600"></svg>
+    </div>
+
     <!-- JAVASCRIPT -->
     <script src="./index.js"></script>
+    <script src="./planets.js"></script>
   </body>
 </html>
