--- a/3_scales-and-bar-charts/index.html
+++ b/3_scales-and-bar-charts/index.html
@@ -8,6 +8,12 @@
   </head>
 
   <body>
+    <div class="canvas">
+      <svg width="600" height="600">
+        <rect></rect>
+      </svg>
+    </div>
+
     <!-- JAVASCRIPT -->
     <script src="./index.js"></script>
   </body>
