groups and margins -- create a bar chart

--- a/3_scales-and-bar-charts/index.html
+++ b/3_scales-and-bar-charts/index.html
@@ -8,11 +8,7 @@
   </head>
 
   <body>
-    <div class="canvas">
-      <svg width="600" height="600">
-        <rect></rect>
-      </svg>
-    </div>
+    <div class="canvas"></div>
 
     <!-- JAVASCRIPT -->
     <script src="./index.js"></script>
