add data to Firestore

--- a/6_Donut-Chart-project/index.html
+++ b/6_Donut-Chart-project/index.html
@@ -40,7 +40,7 @@
               <span class="card-title cyan-text">Add Item:</span>
               <!-- Item Name -->
               <div class="input-field">
-                <input type="text" id="name" />
+                <input type="text" id="name" autofocus />
                 <label for="name">Item Name</label>
               </div>
               <!-- Item Cost -->
