--- a/6_Donut-Chart-project/index.html
+++ b/6_Donut-Chart-project/index.html
@@ -17,6 +17,15 @@
       header {
         margin-bottom: 40px;
       }
+      .tip {
+        padding: 10px;
+        background-color: #333;
+        color: #fff;
+      }
+      .tip .delete {
+        color: hotpink;
+        font-size: 0.8em;
+      }
     </style>
   </head>
 
