--- a/7_Line-Graph-project/index.html
+++ b/7_Line-Graph-project/index.html
@@ -27,9 +27,9 @@
       <div class="row">
         <div class="col s12 l5">
           <button class="active" data-activity="running">Running</button>
+          <button data-activity="walking">Walking</button>
           <button data-activity="hiking">Hiking</button>
           <button data-activity="cycling">Cycling</button>
-          <button data-activity="lifting">Lifting</button>
         </div>
         <div class="col s12 l6 push-l1">
           <div class="canvas"></div>
@@ -45,7 +45,7 @@
             type="text"
             class="grey-text"
             id="running"
-            placeholder="Distance or time"
+            placeholder="Distance in miles"
           />
           <p class="center pink-text error text-lighten-1"></p>
         </form>
