add data to Firestore

--- a/7_Line-Graph-project/index.html
+++ b/7_Line-Graph-project/index.html
@@ -42,6 +42,7 @@
             How much <span>running</span> have you done today?
           </p>
           <input
+            autofocus
             type="text"
             class="grey-text"
             id="running"
