create svg container and graph group

--- a/7_Line-Graph-project/index.html
+++ b/7_Line-Graph-project/index.html
@@ -32,7 +32,9 @@
           <button data-activity="cycling">Cycling</button>
         </div>
         <div class="col s12 l6 push-l1">
-          <div class="canvas"></div>
+          <div class="canvas">
+            <!-- CHART ADDED HERE -->
+          </div>
         </div>
       </div>
 
