--- a/7_Line-Graph-project/index.html
+++ b/7_Line-Graph-project/index.html
@@ -31,7 +31,7 @@
           <button data-activity="hiking">Hiking</button>
           <button data-activity="cycling">Cycling</button>
         </div>
-        <div class="col s12 l6 push-l1">
+        <div class="col s12 l7">
           <div class="canvas">
             <!-- CHART ADDED HERE -->
           </div>
